<resources>
    <string name="app_name">CycleDroid Inschrijvingen</string>
    <string name="overzicht">Overzicht: </string>
    <string name="Afstand">Afstand</string>
    <string name="action_settings">search_title</string>
    <string name="Titel">Titel</string>
    <string name="km">km</string>
    <string name="Deelnemers">Deelnemers</string>
    <string name="Wedstrijden">Wedstrijden</string>
    <string name="search_title">search_title</string>
    <string name="Instellingen">Instellingen</string>
    <string name="Info">Info</string>
    <string name="Informatie">Informatie</string>
    <string-array name="categories_array">
        <item>Profs</item>
        <item>Elite zonder contract</item>
        <item>Beloften</item>
        <item>Junioren</item>
        <item>Nieuwelingen</item>
        <item>Aspiranten</item>
    </string-array>
    <string-array name="geslacht_array">
        <item>Man</item>
        <item>Vrouw</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="aanbevolen_wedstrijden">Aanbevolen Wedstrijden</string>
    <string name="naam">Naam</string>
    <string name="achternaam">Achternaam</string>
    <string name="geslacht">Geslacht:</string>
    <string name="leeftijd">Leeftijd</string>
    <string name="ok">OK</string>
    <string name="gebruikersnaam">Gebruikersnaam</string>
    <string name="aanmelden">Aanmelden</string>
    <string name="register">Register</string>
    <string name="afmelden">Afmelden</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vertrek_adres">Vertrek adres</string>
    <string name="datum">Datum</string>
    <string name="aankomst">Aankomst</string>
    <string name="categorie">Categorie</string>
    <string name="InfoContent">Deze app is ontwikkeld door Dietger Pieters.    Student aan de Erasmushogeschool Brussel campus Kaai.    Versie 0.0.1</string>
    <string name="InfoContent">Deze app is ontwikkeld door Dietger Pieters.    Student aan de Erasmushogeschool Brussel campus Kaai.    Versie 0.0.1</string>


</resources>
